feat<home>: Ajustando Icones e responsivade

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustavo Oliveira</title>
-    <link rel="stylesheet" href="/style/home.css">
+    <link rel="stylesheet" href="./style/home.css">
     <script></script>
 </head>
 
@@ -25,17 +25,17 @@
             <ul class="icon-list">
                 <li>
                     <a href="">
-                        <img src="assets/icons/java.svg" width="53">
+                        <img src="assets/icons/java.svg" width="64">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="assets/icons/kotlin.svg" width="50">
+                        <img src="assets/icons/kotlin.svg" width="60">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="assets/icons/python.svg" width="50">
+                        <img src="assets/icons/python.svg" width="60">
                     </a>
                 </li>
             </ul>
@@ -48,13 +48,26 @@
         </div>
     </section>
 
-    <b>ENTRE EM CONTATO</b>
-    <br>
-    <img src="assets/icons/circle-phone.svg" width="50">
-    <img src="assets/icons/circle-mail.svg" width="50">
-    <img src="assets/icons/circle-linkedin.svg" width="50">
+    <div id="icon-language-container">
+        <img id="icon-java-container" src="assets/icons/java.svg" alt="Java Icon"> 
+        <img id="icon-python-container" src="assets/icons/python.svg" alt="Python Icon"> 
+        <img id="icon-kotlin-container" src="assets/icons/kotlin.svg" alt="Kotlin Icon"> 
+    </div>
 
-
+    <div class="name-container">
+        <h2>ENTRE EM CONTATO</h2>
+        <div class="icons-contact-container">
+            <a href="">
+                <img src="assets/icons/circle-phone.svg" width="50">
+            </a>
+            <a href="">
+                <img src="assets/icons/circle-mail.svg" width="50">
+            </a>
+            <a href="">
+                <img src="assets/icons/circle-linkedin.svg" width="50">
+            </a>
+        </div>
+    </div>
 
 
 </body>
