--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,6 @@
                 </li>
             </ul>
         </div>
-
         <div class="name-container">
             <h1>Gustavo</h1>
             <h1>Oliveira</h1>
@@ -52,11 +51,11 @@
     </section>
 
     <div id="icon-language-container">
-        <img id="icon-language" src="assets/icons/java.svg" alt="Java Icon">
+        <img id="icon-language" src="assets/icons/java-lightgreen.svg" alt="Java Icon">
         <script src="./scripts/change-icon-language-container.js"></script>
     </div>
 
-
+    
     <div class="name-container">
         <h2>ENTRE EM CONTATO</h2>
         <div class="icons-contact-container">
@@ -72,6 +71,7 @@
         </div>
     </div>
 
+    
 
 </body>
 
