feat <Sobre>: Adicionado Texto e imagem

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <script src="./scripts/change-icon-language-container.js"></script>
     </div>
 
-    
+
     <div class="name-container">
         <h2>ENTRE EM CONTATO</h2>
         <div class="icons-contact-container">
@@ -71,7 +71,41 @@
         </div>
     </div>
 
-    
+    <div class="about-container">
+        <div>
+            <h2>Sobre Mim</h2>
+            <p>Cursando Ciência da Computação na FEI e formado Técnico em Desenvolvimento de Sistemas pela ETEC em 2021.
+                <br><br>
+                Sou um desenvolvedor versátil, já trabalhei como Front-end e Designer possuo um bom conhecimento de UX
+                (User Experience) e UI (User Interface), hoje estou focado nos meus estudos em Java e Kotlin.
+                <br><br>
+                Se você estiver procurando por um desenvolvedor dedicado e comprometido, por favor, sinta-se à vontade
+                para entrar em contato comigo.
+            </p>
+        </div>
+
+        <div>
+            <img src="./assets/images/person-with-computer.png" width="500"
+                alt="Man in glasses using computer with various electronic devices in the background: Headphones, HD, route and outhers.">
+        </div>
+    </div>
+
+    <div class="skills-container">
+        <div class="skills-text-container">
+            <h2>Habilidades</h2>
+            <p>Algumas das tecnologias que utilizo para solucionar problemas. Tentando sempre utilizar das ferramentas
+                da melhor maneira possível desde a interface do usuário do Frontend ao Backend, oferecendo uma
+                experiência fluida e interativa aos usuários finais.</p>
+        </div>
+        <div class="skills-cards-container">
+            <div>Java</div>
+            <div>Python</div>
+            <div>Kotlin</div>
+            <div>JavaScript</div>
+            <div>PHP</div>     
+        </div>
+    </div>
+
 
 </body>
 
