feat<animacoes> Efeitos de movimentos e efeito no link

--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustavo Oliveira</title>
     <link rel="stylesheet" href="./style/home.css">
+    <script src="https://kit.fontawesome.com/59c38c00e3.js" crossorigin="anonymous"></script>
     <script></script>
 </head>
 
 <body>
     <section id="menu-container">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Sobre mim</a></li>
-            <li><a href="index.html">Projetos</a></li>
-            <li><a href="index.html">Contato</a></li>
-        </ul>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="index.html">Sobre mim</a>
+            <a href="index.html">Projetos</a>
+            <a href="index.html">Contato</a>
+        </nav>
     </section>
 
     <section id="home-container">
@@ -88,6 +89,9 @@
             <img src="./assets/images/person-with-computer.png" width="500"
                 alt="Man in glasses using computer with various electronic devices in the background: Headphones, HD, route and outhers.">
         </div>
+        <div>
+            <button id="botao-seta">Baixo</button>
+        </div>
     </div>
 
     <div class="skills-container">
@@ -98,7 +102,17 @@
                 experiência fluida e interativa aos usuários finais.</p>
         </div>
         <div class="skills-cards-container">
-            <div>Java</div>
+            <div>
+                <div>
+                    <img src="./assets/icons/java.svg">"
+                </div>
+                <div>
+                    <div>Java</div>
+                    <div>Ver Projetos</div>
+                    <div>Seta</div>
+                </div>
+            </div>
+
             <div>Python</div>
             <div>Kotlin</div>
             <div>JavaScript</div>
