feat<Habilidades>Adicionado modelo dos cards

--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,7 @@
             <img src="./assets/images/person-with-computer.png" width="500"
                 alt="Man in glasses using computer with various electronic devices in the background: Headphones, HD, route and outhers.">
         </div>
-        <div>
-            <button id="botao-seta">Baixo</button>
-        </div>
+
     </div>
 
     <div class="skills-container">
@@ -101,26 +99,79 @@
                 da melhor maneira possível desde a interface do usuário do Frontend ao Backend, oferecendo uma
                 experiência fluida e interativa aos usuários finais.</p>
         </div>
+
         <div class="skills-cards-container">
-            <div>
-                <div>
-                    <img src="./assets/icons/java.svg">"
-                </div>
-                <div>
-                    <div>Java</div>
-                    <div>Ver Projetos</div>
-                    <div>Seta</div>
+            
+            <div class="skills-cards-container-cards" id="java-card">
+                <div class="skills-cards-container-cards-background"></div>
+                <img class="skills-cards-container-img" src="./assets/icons/java.svg">
+                <div class="skills-cards-container-infos">
+                    <div class="skills-cards-container-title">Java</div>
+                    <div class="skills-cards-container-projects">
+                        <a href="">
+                            <p>Ver Projetos</p>
+                            <i class="fa-solid fa-list-check"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div>Python</div>
-            <div>Kotlin</div>
-            <div>JavaScript</div>
-            <div>PHP</div>     
+            <div class="skills-cards-container-cards" id="kotlin-card">
+                <div class="skills-cards-container-cards-background"></div>
+                <img class="skills-cards-container-img" src="./assets/icons/kotlin.svg">
+                <div class="skills-cards-container-infos">
+                    <div class="skills-cards-container-title">Kotlin</div>
+                    <div class="skills-cards-container-projects"> <a href="">
+                            <p>Ver Projetos</p>
+                            <i class="fa-solid fa-list-check"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills-cards-container-cards" id="python-card">
+                <div class="skills-cards-container-cards-background"></div>
+                <img class="skills-cards-container-img" src="./assets/icons/python.svg">
+                <div class="skills-cards-container-infos">
+                    <div class="skills-cards-container-title">Python</div>
+                    <div class="skills-cards-container-projects"><a href="">
+                            <p>Ver Projetos</p>
+                            <i class="fa-solid fa-list-check"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills-cards-container-cards" id="javascript-card">
+                <div class="skills-cards-container-cards-background"></div>
+                <img class="skills-cards-container-img" src="./assets/icons/javascript.svg">
+                <div class="skills-cards-container-infos">
+                    <div class="skills-cards-container-title">Javascript</div>
+                    <div class="skills-cards-container-projects"><a href="">
+                            <p>Ver Projetos</p>
+                            <i class="fa-solid fa-list-check"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills-cards-container-cards" id="php-card">
+                <div class="skills-cards-container-cards-background"></div>
+                <img class="skills-cards-container-img" src="./assets/icons/php.svg">
+                <div class="skills-cards-container-infos">
+                    <div class="skills-cards-container-title">PHP</div>
+                    <div class="skills-cards-container-projects"><a href="">
+                            <p>Ver Projetos</p>
+                            <i class="fa-solid fa-list-check"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
     </div>
-
-
 </body>
 
 </html>
